--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ nav {
     background-color: #40534C;
     position: fixed;
     top: 0;
+    right: 0;
     width: 100%;
     height: 5%;
     font-size: larger;
@@ -25,6 +26,7 @@ ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
+    padding-left: .5%;
     top: 50%;
     position: absolute;
     -ms-transform: translateY(-50%);
