--- a/style.css
+++ b/style.css
@@ -42,7 +42,7 @@ li :hover {
     background-color: #2e3c37;
 }
 
-.project-section {
+.project-section, .map-section{
     border: 2pt solid #677D6A;
     margin: 2.5%;
     padding: 1%;
@@ -86,4 +86,20 @@ img {
 .pdf {
     width: 100%;
     height: 100vh;
+}
+
+#network_map{
+    /* width: 95vw; */
+    height: 60vh;
+    background-color: gainsboro;
+  }
+
+.project-section,.mini-project-section {
+    display: none;
+}
+
+#projects-intro-text {
+    margin-top: 10vh;
+    text-align: center;
+    margin-bottom: 0;
 }
