--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ a {
     text-decoration: none;
 }
 
-ul {
+nav ul {
     list-style-type: none;
     margin: 0;
     padding: 0;
@@ -33,7 +33,7 @@ ul {
     transform: translateY(-50%);
 }
 
-li {
+nav li {
     display: inline;
     border: 2pt solid #bbb;
 }
@@ -102,4 +102,8 @@ img {
     margin-top: 10vh;
     text-align: center;
     margin-bottom: 0;
+}
+
+.section ul{
+    list-style-type: none;
 }
