--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ html {
 }
 
 nav {
+    display: none;
     background-color: #40534C;
     position: fixed;
     top: 0;
@@ -42,11 +43,19 @@ li :hover {
     background-color: #2e3c37;
 }
 
-.section, .interactive-project-section, .project-section, .map-section{
+.content-container {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    grid-auto-rows: minmax(98vh, auto);
+    column-gap: 1%;
+    row-gap: .5%;
+}
+
+.map-section {
+    display: none;
     border: 2pt solid #677D6A;
-    margin: 2.5%;
-    padding: 1%;
-    text-align: justify;
+    width: auto;
+    padding: 0.5%;
 }
 
 .project-link {
@@ -65,22 +74,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    width: 50%;
-}
-
-#mini-section-container {
-    display: flex;
-    justify-content: center;
-    border: none;
-}
-
-.interactive-mini-project-section, .mini-project-section {
-    text-align: center;
-    border: 2pt solid #677D6A;
-    margin-left: 1%;
-    margin-right: 1%;
-    width: 33%;
-    padding: 1%;
+    width: 75%;
 }
 
 .pdf {
@@ -88,22 +82,15 @@ img {
     height: 100vh;
 }
 
-#network_map{
-    /* width: 95vw; */
-    height: 60vh;
+#transit-map{
+    height: 98vh;
     background-color: gainsboro;
-  }
-
-.interactive-project-section, .interactive-mini-project-section {
-    display: none;
 }
 
-#projects-intro-text {
-    margin-top: 10vh;
-    text-align: center;
-    margin-bottom: 0;
-}
-
-.section ul{
+.map-section ul{
     list-style-type: none;
+}
+
+#brief-intro {
+    display: block;
 }
