Made revisions to the written content of the site

--- a/style.css
+++ b/style.css
@@ -87,9 +87,9 @@ img {
     background-color: gainsboro;
 }
 
-.map-section ul{
+/* .map-section ul{
     list-style-type: none;
-}
+} */
 
 #brief-intro {
     display: block;
